Lab6Parser.java
// $ANTLR 3.4 Lab6.g 2015-10-20 12:23:02

	import java.lang.Math;
	import java.io.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class Lab6Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BIN", "BINARY", "CLOSEPAR", "COSINE", "DEC", "DECIMAL", "DIV", "EXPONENT", "HEX", "HEXADECIMAL", "INT", "LOG", "MINUS", "MULT", "OCT", "OCTAL", "OPENPAR", "PLUS", "SINE", "TANGENT", "WS"
    };

    public static final int EOF=-1;
    public static final int BIN=4;
    public static final int BINARY=5;
    public static final int CLOSEPAR=6;
    public static final int COSINE=7;
    public static final int DEC=8;
    public static final int DECIMAL=9;
    public static final int DIV=10;
    public static final int EXPONENT=11;
    public static final int HEX=12;
    public static final int HEXADECIMAL=13;
    public static final int INT=14;
    public static final int LOG=15;
    public static final int MINUS=16;
    public static final int MULT=17;
    public static final int OCT=18;
    public static final int OCTAL=19;
    public static final int OPENPAR=20;
    public static final int PLUS=21;
    public static final int SINE=22;
    public static final int TANGENT=23;
    public static final int WS=24;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public Lab6Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public Lab6Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return Lab6Parser.tokenNames; }
    public String getGrammarFileName() { return "Lab6.g"; }


        public static void main(String[] args) throws Exception {
    	System.out.println("octal numbers are preceded by 'oct'");
            Lab6Lexer lex = new Lab6Lexer(new ANTLRInputStream(System.in));
           	CommonTokenStream tokens = new CommonTokenStream(lex);
            Lab6Parser parser = new Lab6Parser(tokens);

            try {
                parser.top();
            } catch (RecognitionException e)  {
                e.printStackTrace();
            }
        }



    // $ANTLR start "top"
    // Lab6.g:70:1: top : ( expr | OPENPAR expr CLOSEPAR );
    public final void top() throws RecognitionException {
        try {
            // Lab6.g:70:6: ( expr | OPENPAR expr CLOSEPAR )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==BINARY||LA1_0==COSINE||LA1_0==DECIMAL||(LA1_0 >= HEXADECIMAL && LA1_0 <= LOG)||LA1_0==OCTAL||(LA1_0 >= SINE && LA1_0 <= TANGENT)) ) {
                alt1=1;
            }
            else if ( (LA1_0==OPENPAR) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // Lab6.g:70:8: expr
                    {
                    pushFollow(FOLLOW_expr_in_top312);
                    expr();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // Lab6.g:71:4: OPENPAR expr CLOSEPAR
                    {
                    match(input,OPENPAR,FOLLOW_OPENPAR_in_top317); 

                    pushFollow(FOLLOW_expr_in_top319);
                    expr();

                    state._fsp--;


                    match(input,CLOSEPAR,FOLLOW_CLOSEPAR_in_top321); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "top"



    // $ANTLR start "expr"
    // Lab6.g:74:1: expr : ( addExpr | subExpr | mulExpr | divExpr | expExpr | sinExpr | cosExpr | tanExpr | logExpr | digit );
    public final void expr() throws RecognitionException {
        float addExpr1 =0.0f;

        float subExpr2 =0.0f;

        float mulExpr3 =0.0f;

        float divExpr4 =0.0f;

        float expExpr5 =0.0f;

        float sinExpr6 =0.0f;

        float cosExpr7 =0.0f;

        float tanExpr8 =0.0f;

        float logExpr9 =0.0f;

        float digit10 =0.0f;


        try {
            // Lab6.g:75:2: ( addExpr | subExpr | mulExpr | divExpr | expExpr | sinExpr | cosExpr | tanExpr | logExpr | digit )
            int alt2=10;
            switch ( input.LA(1) ) {
            case INT:
                {
                switch ( input.LA(2) ) {
                case PLUS:
                    {
                    alt2=1;
                    }
                    break;
                case MINUS:
                    {
                    alt2=2;
                    }
                    break;
                case MULT:
                    {
                    alt2=3;
                    }
                    break;
                case DIV:
                    {
                    alt2=4;
                    }
                    break;
                case EXPONENT:
                    {
                    alt2=5;
                    }
                    break;
                case EOF:
                case CLOSEPAR:
                    {
                    alt2=10;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }

                }
                break;
            case DECIMAL:
                {
                switch ( input.LA(2) ) {
                case PLUS:
                    {
                    alt2=1;
                    }
                    break;
                case MINUS:
                    {
                    alt2=2;
                    }
                    break;
                case MULT:
                    {
                    alt2=3;
                    }
                    break;
                case DIV:
                    {
                    alt2=4;
                    }
                    break;
                case EXPONENT:
                    {
                    alt2=5;
                    }
                    break;
                case EOF:
                case CLOSEPAR:
                    {
                    alt2=10;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 2, input);

                    throw nvae;

                }

                }
                break;
            case BINARY:
                {
                switch ( input.LA(2) ) {
                case PLUS:
                    {
                    alt2=1;
                    }
                    break;
                case MINUS:
                    {
                    alt2=2;
                    }
                    break;
                case MULT:
                    {
                    alt2=3;
                    }
                    break;
                case DIV:
                    {
                    alt2=4;
                    }
                    break;
                case EXPONENT:
                    {
                    alt2=5;
                    }
                    break;
                case EOF:
                case CLOSEPAR:
                    {
                    alt2=10;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 3, input);

                    throw nvae;

                }

                }
                break;
            case HEXADECIMAL:
                {
                switch ( input.LA(2) ) {
                case PLUS:
                    {
                    alt2=1;
                    }
                    break;
                case MINUS:
                    {
                    alt2=2;
                    }
                    break;
                case MULT:
                    {
                    alt2=3;
                    }
                    break;
                case DIV:
                    {
                    alt2=4;
                    }
                    break;
                case EXPONENT:
                    {
                    alt2=5;
                    }
                    break;
                case EOF:
                case CLOSEPAR:
                    {
                    alt2=10;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 4, input);

                    throw nvae;

                }

                }
                break;
            case OCTAL:
                {
                switch ( input.LA(2) ) {
                case PLUS:
                    {
                    alt2=1;
                    }
                    break;
                case MINUS:
                    {
                    alt2=2;
                    }
                    break;
                case MULT:
                    {
                    alt2=3;
                    }
                    break;
                case DIV:
                    {
                    alt2=4;
                    }
                    break;
                case EXPONENT:
                    {
                    alt2=5;
                    }
                    break;
                case EOF:
                case CLOSEPAR:
                    {
                    alt2=10;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 5, input);

                    throw nvae;

                }

                }
                break;
            case SINE:
                {
                alt2=6;
                }
                break;
            case COSINE:
                {
                alt2=7;
                }
                break;
            case TANGENT:
                {
                alt2=8;
                }
                break;
            case LOG:
                {
                alt2=9;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // Lab6.g:75:4: addExpr
                    {
                    pushFollow(FOLLOW_addExpr_in_expr337);
                    addExpr1=addExpr();

                    state._fsp--;


                     System.out.println( addExpr1 ); 

                    }
                    break;
                case 2 :
                    // Lab6.g:76:4: subExpr
                    {
                    pushFollow(FOLLOW_subExpr_in_expr345);
                    subExpr2=subExpr();

                    state._fsp--;


                     System.out.println( subExpr2 ); 

                    }
                    break;
                case 3 :
                    // Lab6.g:77:4: mulExpr
                    {
                    pushFollow(FOLLOW_mulExpr_in_expr352);
                    mulExpr3=mulExpr();

                    state._fsp--;


                     System.out.println( mulExpr3 ); 

                    }
                    break;
                case 4 :
                    // Lab6.g:78:4: divExpr
                    {
                    pushFollow(FOLLOW_divExpr_in_expr359);
                    divExpr4=divExpr();

                    state._fsp--;


                     System.out.println( divExpr4 ); 

                    }
                    break;
                case 5 :
                    // Lab6.g:79:4: expExpr
                    {
                    pushFollow(FOLLOW_expExpr_in_expr366);
                    expExpr5=expExpr();

                    state._fsp--;


                     System.out.println( expExpr5 ); 

                    }
                    break;
                case 6 :
                    // Lab6.g:80:4: sinExpr
                    {
                    pushFollow(FOLLOW_sinExpr_in_expr373);
                    sinExpr6=sinExpr();

                    state._fsp--;


                     System.out.println( sinExpr6 ); 

                    }
                    break;
                case 7 :
                    // Lab6.g:81:4: cosExpr
                    {
                    pushFollow(FOLLOW_cosExpr_in_expr380);
                    cosExpr7=cosExpr();

                    state._fsp--;


                     System.out.println( cosExpr7 ); 

                    }
                    break;
                case 8 :
                    // Lab6.g:82:4: tanExpr
                    {
                    pushFollow(FOLLOW_tanExpr_in_expr387);
                    tanExpr8=tanExpr();

                    state._fsp--;


                     System.out.println( tanExpr8 ); 

                    }
                    break;
                case 9 :
                    // Lab6.g:83:4: logExpr
                    {
                    pushFollow(FOLLOW_logExpr_in_expr394);
                    logExpr9=logExpr();

                    state._fsp--;


                     System.out.println( logExpr9 ); 

                    }
                    break;
                case 10 :
                    // Lab6.g:84:4: digit
                    {
                    pushFollow(FOLLOW_digit_in_expr401);
                    digit10=digit();

                    state._fsp--;


                     System.out.println( digit10 ); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "expr"



    // $ANTLR start "parExpr"
    // Lab6.g:87:1: parExpr returns [float value] : ( OPENPAR addExpr CLOSEPAR | OPENPAR subExpr CLOSEPAR | OPENPAR mulExpr CLOSEPAR | OPENPAR divExpr CLOSEPAR );
    public final float parExpr() throws RecognitionException {
        float value = 0.0f;


        float addExpr11 =0.0f;

        float subExpr12 =0.0f;

        float mulExpr13 =0.0f;

        float divExpr14 =0.0f;


        try {
            // Lab6.g:88:2: ( OPENPAR addExpr CLOSEPAR | OPENPAR subExpr CLOSEPAR | OPENPAR mulExpr CLOSEPAR | OPENPAR divExpr CLOSEPAR )
            int alt3=4;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==OPENPAR) ) {
                switch ( input.LA(2) ) {
                case INT:
                    {
                    switch ( input.LA(3) ) {
                    case PLUS:
                        {
                        alt3=1;
                        }
                        break;
                    case MINUS:
                        {
                        alt3=2;
                        }
                        break;
                    case MULT:
                        {
                        alt3=3;
                        }
                        break;
                    case DIV:
                        {
                        alt3=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;

                    }

                    }
                    break;
                case DECIMAL:
                    {
                    switch ( input.LA(3) ) {
                    case PLUS:
                        {
                        alt3=1;
                        }
                        break;
                    case MINUS:
                        {
                        alt3=2;
                        }
                        break;
                    case MULT:
                        {
                        alt3=3;
                        }
                        break;
                    case DIV:
                        {
                        alt3=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 3, input);

                        throw nvae;

                    }

                    }
                    break;
                case BINARY:
                    {
                    switch ( input.LA(3) ) {
                    case PLUS:
                        {
                        alt3=1;
                        }
                        break;
                    case MINUS:
                        {
                        alt3=2;
                        }
                        break;
                    case MULT:
                        {
                        alt3=3;
                        }
                        break;
                    case DIV:
                        {
                        alt3=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 4, input);

                        throw nvae;

                    }

                    }
                    break;
                case HEXADECIMAL:
                    {
                    switch ( input.LA(3) ) {
                    case PLUS:
                        {
                        alt3=1;
                        }
                        break;
                    case MINUS:
                        {
                        alt3=2;
                        }
                        break;
                    case MULT:
                        {
                        alt3=3;
                        }
                        break;
                    case DIV:
                        {
                        alt3=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 5, input);

                        throw nvae;

                    }

                    }
                    break;
                case OCTAL:
                    {
                    switch ( input.LA(3) ) {
                    case PLUS:
                        {
                        alt3=1;
                        }
                        break;
                    case MINUS:
                        {
                        alt3=2;
                        }
                        break;
                    case MULT:
                        {
                        alt3=3;
                        }
                        break;
                    case DIV:
                        {
                        alt3=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 6, input);

                        throw nvae;

                    }

                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }

            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // Lab6.g:88:4: OPENPAR addExpr CLOSEPAR
                    {
                    match(input,OPENPAR,FOLLOW_OPENPAR_in_parExpr420); 

                    pushFollow(FOLLOW_addExpr_in_parExpr422);
                    addExpr11=addExpr();

                    state._fsp--;


                    match(input,CLOSEPAR,FOLLOW_CLOSEPAR_in_parExpr424); 

                    value = addExpr11;

                    }
                    break;
                case 2 :
                    // Lab6.g:89:4: OPENPAR subExpr CLOSEPAR
                    {
                    match(input,OPENPAR,FOLLOW_OPENPAR_in_parExpr431); 

                    pushFollow(FOLLOW_subExpr_in_parExpr433);
                    subExpr12=subExpr();

                    state._fsp--;


                    match(input,CLOSEPAR,FOLLOW_CLOSEPAR_in_parExpr435); 

                    value = subExpr12;

                    }
                    break;
                case 3 :
                    // Lab6.g:90:4: OPENPAR mulExpr CLOSEPAR
                    {
                    match(input,OPENPAR,FOLLOW_OPENPAR_in_parExpr442); 

                    pushFollow(FOLLOW_mulExpr_in_parExpr444);
                    mulExpr13=mulExpr();

                    state._fsp--;


                    match(input,CLOSEPAR,FOLLOW_CLOSEPAR_in_parExpr446); 

                    value = mulExpr13;

                    }
                    break;
                case 4 :
                    // Lab6.g:91:4: OPENPAR divExpr CLOSEPAR
                    {
                    match(input,OPENPAR,FOLLOW_OPENPAR_in_parExpr453); 

                    pushFollow(FOLLOW_divExpr_in_parExpr455);
                    divExpr14=divExpr();

                    state._fsp--;


                    match(input,CLOSEPAR,FOLLOW_CLOSEPAR_in_parExpr457); 

                    value = divExpr14;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "parExpr"



    // $ANTLR start "addExpr"
    // Lab6.g:94:1: addExpr returns [float value] : (l= digit ( PLUS r= digit ) |l= digit ( PLUS r= addExpr ) |l= digit ( PLUS r= subExpr ) |l= digit ( PLUS r= mulExpr ) |l= digit ( PLUS r= divExpr ) |l= digit ( PLUS r= parExpr ) );
    public final float addExpr() throws RecognitionException {
        float value = 0.0f;


        float l =0.0f;

        float r =0.0f;


        try {
            // Lab6.g:95:2: (l= digit ( PLUS r= digit ) |l= digit ( PLUS r= addExpr ) |l= digit ( PLUS r= subExpr ) |l= digit ( PLUS r= mulExpr ) |l= digit ( PLUS r= divExpr ) |l= digit ( PLUS r= parExpr ) )
            int alt4=6;
            switch ( input.LA(1) ) {
            case INT:
                {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==PLUS) ) {
                    switch ( input.LA(3) ) {
                    case INT:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 7, input);

                            throw nvae;

                        }

                        }
                        break;
                    case DECIMAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 8, input);

                            throw nvae;

                        }

                        }
                        break;
                    case BINARY:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 9, input);

                            throw nvae;

                        }

                        }
                        break;
                    case HEXADECIMAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 10, input);

                            throw nvae;

                        }

                        }
                        break;
                    case OCTAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 11, input);

                            throw nvae;

                        }

                        }
                        break;
                    case OPENPAR:
                        {
                        alt4=6;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 6, input);

                        throw nvae;

                    }

                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;

                }
                }
                break;
            case DECIMAL:
                {
                int LA4_2 = input.LA(2);

                if ( (LA4_2==PLUS) ) {
                    switch ( input.LA(3) ) {
                    case INT:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 7, input);

                            throw nvae;

                        }

                        }
                        break;
                    case DECIMAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 8, input);

                            throw nvae;

                        }

                        }
                        break;
                    case BINARY:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 9, input);

                            throw nvae;

                        }

                        }
                        break;
                    case HEXADECIMAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 10, input);

                            throw nvae;

                        }

                        }
                        break;
                    case OCTAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 11, input);

                            throw nvae;

                        }

                        }
                        break;
                    case OPENPAR:
                        {
                        alt4=6;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 6, input);

                        throw nvae;

                    }

                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;

                }
                }
                break;
            case BINARY:
                {
                int LA4_3 = input.LA(2);

                if ( (LA4_3==PLUS) ) {
                    switch ( input.LA(3) ) {
                    case INT:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 7, input);

                            throw nvae;

                        }

                        }
                        break;
                    case DECIMAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 8, input);

                            throw nvae;

                        }

                        }
                        break;
                    case BINARY:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 9, input);

                            throw nvae;

                        }

                        }
                        break;
                    case HEXADECIMAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 10, input);

                            throw nvae;

                        }

                        }
                        break;
                    case OCTAL:
                        {
                        switch ( input.LA(4) ) {
                        case EOF:
                        case CLOSEPAR:
                            {
                            alt4=1;
                            }
                            break;
                        case PLUS:
                            {
                            alt4=2;
                            }
                            break;
                        case MINUS:
                            {
                            alt4=3;
                            }
                            break;
                        case MULT:
                            {
                            alt4=4;
                            }
                            break;
                        case DIV:
                            {
                            alt4=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 11, input);

                            throw nvae;

                        }
